--- a/src/components/CardLocalColeta/style.module.css
+++ b/src/components/CardLocalColeta/style.module.css
@@ -8,6 +8,7 @@
     width: 350px;
     height: 300px;
     margin-bottom: 25px;
+    background-color: #fff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
