--- a/src/components/CardLocalColeta/style.module.css
+++ b/src/components/CardLocalColeta/style.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     text-align: center;
     padding: 16px;
-    width: 350px;
+    width: 450px;
     height: 350px;
     margin-bottom: 25px;
     background-color: #fff;
@@ -27,4 +27,10 @@
     justify-content: center;
     height: 50px;
     gap: 2rem;
+}
+
+.caixaDoisTexto{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
 }
